--- a/src/res/main.kv
+++ b/src/res/main.kv
@@ -55,19 +55,38 @@ RelativeLayout:
                 text: app.amiga_rate
                 font_size: 18
             Widget:
-                size_hint_y: 1.0
+                size_hint_y: 0.2
             ToggleButton:
                 size_hint_y: 1.0
                 id: pto_0_toggle
                 text: "Auto PTO 0"
                 font_size: 30
                 on_press: app.set_pto_0()
-            # Switch:
-            #     size_hint_y: 1.0
-            #     id: pto_0_dir
-            #     active: True
             Widget:
+                size_hint_y: 0.2
+            BoxLayout:
                 size_hint_y: 1.0
+                orientation: 'horizontal'
+                ToggleButton:
+                    text:"IN"
+                    group: "hbridge"
+                    id: hbridge_in
+                    on_press: app.set_hbridge_0()
+                ToggleButton:
+                    size_hint_x: 1.5
+                    text:"H-bridge"
+                    group: "hbridge"
+                    id: hbridge_stop
+                    on_press: app.set_hbridge_0()
+                    state: "down"
+                    disabled: "True"
+                ToggleButton:
+                    text:"OUT"
+                    group: "hbridge"
+                    id: hbridge_out
+                    on_press: app.set_hbridge_0()
+            Widget:
+                size_hint_y: 0.5
         VirtualJoystickWidget:
             id: joystick
         TabbedPanel:
