--- a/src/res/main.kv
+++ b/src/res/main.kv
@@ -54,8 +54,26 @@ RelativeLayout:
             Label:
                 text: app.amiga_rate
                 font_size: 18
+            Button:
+                text: "Read value"
+                id: read_val_btn
+                font_size: 18
+                on_release: app.trigger_read_req()
+            Label:
+                size_hint_y: 0.5
+                text: "Value ID: " + str(int(read_val_sld.value))
+            Slider:
+                id: read_val_sld
+                min: 0
+                max: 100
+                step: 1
+                orientation: 'horizontal'
+                on_touch_move: app.val_slider_move()
+            Label:
+                size_hint_y: 0.5
+                text: "Value: " + str(app.read_value)
             Widget:
-                size_hint_y: 2.0
+                size_hint_y: 0.5
         VirtualJoystickWidget:
             id: joystick
         TabbedPanel:
