Read & unpack values from request

--- a/src/res/main.kv
+++ b/src/res/main.kv
@@ -72,6 +72,9 @@ RelativeLayout:
             Label:
                 size_hint_y: 0.5
                 text: "Value: " + str(app.read_value)
+            Label:
+                size_hint_y: 0.5
+                text: "Success: " + str(app.read_success)
             Widget:
                 size_hint_y: 0.5
         VirtualJoystickWidget:
