Add override for missing pendant E-stop

--- a/src/res/main.kv
+++ b/src/res/main.kv
@@ -55,7 +55,13 @@ RelativeLayout:
                 text: app.amiga_rate
                 font_size: 18
             Widget:
-                size_hint_y: 2.0
+                size_hint_y: 1.0
+            ToggleButton:
+                text: "Missing pendant\noverride"
+                id: pendant_override
+                font_size: 18
+            Widget:
+                size_hint_y: 1.0
         VirtualJoystickWidget:
             id: joystick
         TabbedPanel:
