--- a/src/res/main.kv
+++ b/src/res/main.kv
@@ -15,7 +15,7 @@
 RelativeLayout:
     Button:
         id: back_btn_layout
-        pos_hint: {"x": 0.0, "top": 1.0}
+        pos_hint: {"x": 0, "top": 1.0}
         background_color: 0, 0, 0, 0
         size_hint: 0.1, 0.1
         background_normal: "assets/back_button.png"
@@ -26,6 +26,26 @@ RelativeLayout:
             size: self.parent.size
     BoxLayout:
         orientation: 'horizontal'
+        TabbedPanel:
+            pos_hint: {"x": 0.0, "top": 0.9}
+            background_color: 0, 0, 0, 0 
+            do_default_tab: False
+            TabbedPanelItem:
+                text: "Rgb"
+                Image:
+                    id: rgb
+            TabbedPanelItem:
+                text: "Disparity"
+                Image:
+                    id: disparity
+            TabbedPanelItem:
+                text: "Left"
+                Image:
+                    id: left
+            TabbedPanelItem:
+                text: "Right"
+                Image:
+                    id: right
         BoxLayout:
             size_hint_x: 0.3
             orientation: 'vertical'
@@ -58,21 +78,4 @@ RelativeLayout:
                 size_hint_y: 2.0
         VirtualJoystickWidget:
             id: joystick
-        TabbedPanel:
-            do_default_tab: False
-            TabbedPanelItem:
-                text: "Rgb"
-                Image:
-                    id: rgb
-            TabbedPanelItem:
-                text: "Disparity"
-                Image:
-                    id: disparity
-            TabbedPanelItem:
-                text: "Left"
-                Image:
-                    id: left
-            TabbedPanelItem:
-                text: "Right"
-                Image:
-                    id: right
+        
